Issue 648: - added columns "Sittings start" and "Sittings status" to the "scheduled" tab of the Clerk?speaker workspace. - added calculation of whether the scheduled sitting is past/present/future (based on the most "recent" sitting for the item). - gave the "scheduled" tab it own template, given different data set. - changed styling of all "table.listing tr td" to have content vertically aligned top. Reworked 2 viewlet templates used within the workflow view templates to be evoque-based (bringing the workflow view closer to being valid HTML).

--- a/bungeni.main/trunk/bungeni/portal/static/html/resources/20-public.css
+++ b/bungeni.main/trunk/bungeni/portal/static/html/resources/20-public.css
@@ -745,6 +745,9 @@ table.listing tr.present td,
 table.listing tr.future td {
     white-space: nowrap;
 }
+table.listing tr td {
+    vertical-align: top;
+}
 
 /* Vertical addition class */
 table.vertical {
